src/test/ui/borrowck/two-phase-reservation-sharing-interference-2.nll.stderr
error[E0502]: cannot borrow `v` as mutable because it is also borrowed as immutable
  --> $DIR/two-phase-reservation-sharing-interference-2.rs:22:5
   |
LL |     let shared = &v;
   |                  -- immutable borrow occurs here
LL | 
LL |     v.push(shared.len()); //~ ERROR cannot borrow `v` as mutable
   |     ^      ------ immutable borrow later used here
   |     |
   |     mutable borrow occurs here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0502`.
